--- a/package.json
+++ b/package.json
@@ -8,11 +8,19 @@
     "npm": "6.9.0"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "Nelson Anane",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "bcryptjs": "^2.4.3",
+    "express": "^4.17.1",
+    "express-validator": "^6.1.1",
+    "gravatar": "^1.8.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.6.6",
+    "multer": "^1.4.2",
+    "nodemon": "^1.19.1"
   }
 }
