--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-validator": "^6.1.1",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.3.0-beta2",
     "mongoose": "^5.6.6",
     "multer": "^1.4.2",
     "nodemon": "^1.19.1"
