--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "rutgers black alumni",
   "main": "index.js",
+  "engines": {
+    "node": "10.15.3",
+    "npm": "5.0.3"
+  },
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
