--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "start": "node index.js",
     "server": "nodemon index.js",
     "client": "npm run start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "dev": "concurrently \"npm run server\" \"npm run client\" \"npm run webhook\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
-    "web": "node index.js"
+    "webhook": "lt -p 5001 -s sdgfsgdfgsdfd"
   },
   "author": "Nelson Anane",
   "license": "ISC",
