fixed image route

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "concurrently": "^4.1.1",
     "express": "^4.17.1",
     "express-validator": "^6.1.1",
+    "formidable": "^1.2.1",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.3.0-beta2",
