--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "formidable": "^1.2.1",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "mongodb": "^3.3.0-beta2",
     "mongoose": "^5.6.6",
     "multer": "^1.4.2",
